# RamenOS

./: .gitignore  .repomixignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  DECISIONS.md  DRIVER_CAPSULE_SPEC.md  EVIDENCE_LEVELS.md  LICENSE-APACHE  LICENSE-MIT  NEXT_TASKS.md  PLATFORM_OVERVIEW.md  README.md  RISKS.md  ROADMAP.md  SECURITY.md  SECURITY_STATUS.md  SLICES.md  STORE_SPEC.md  evidence_policy.toml  justfile  rust-toolchain.toml
.claude/: settings.json
.claude/agents/: boundary-checker.md  constitution-reviewer.md  foundry-validator.md
.codex/: hooks.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_confusion.md  hardware_evidence_report.md
.github/workflows/: ci.yml  mirror_compat_kernel.yml
artifact_store_core/: Cargo.toml
artifact_store_core/src/: lib.rs
artifact_store_schema/: Cargo.toml
artifact_store_schema/examples/: generate_ed25519_keypair.rs
artifact_store_schema/src/: block_sector_trace.rs  claim.rs  crash_context.rs  driver_protocol_trace.rs  evidence_policy.rs  execution_fabric.rs  graduation.rs  lib.rs  minimal_policy.rs  native_wasm.rs  net_packet_trace.rs  observed_caps.rs  path.rs  prereq_graph.rs  projection_storage.rs  queue_item.rs  semantic_state.rs  signature.rs  tests.rs  trace.rs
docs/: AGENTIC_WORKFLOW.md  CLAIM_V0.md  COMPAT_CAPSULE_V0.md  EVIDENCE_POLICY_V0.md  GETTING_STARTED.md  GLOSSARY.md  HARDWARE_STRATEGY.md  HIL_APPLIANCE_EVIDENCE_V0.md  INDEX.md  LINT_DEBT.md  MULTI_DOMAIN.md  OBSERVED_CAPS_V0.md  QUEUE_ITEM_V0.md  RING_BUFFER_V0.md  S1_CONTRACT_PACK.md  S2_SLICE_PLAN.md  S7_SECURITY_HARDENING_PHASE3.md  TRACE_ARTIFACT_V0.md
docs/archive/: README.md
docs/examples/: trusted_keys.example
docs/org/: AUTHORITY_LEVELS.md  BOARD_BRIEF_V0.md  BOARD_PACKET_V0.md  BOARD_VOTE_V0.md  CLAIM_SAFETY.md  CONTEXT_GRANT_V0.md  CURRENT_TASK_V0.md  HANDOFF_PACKET_V0.md  HEARTBEATS.md  HUMAN_DIRECTIVE_V0.md  INTAKE_BUNDLE_V0.md  MERGE_GATE_V0.md  ORG_CONSTITUTION.md  RAMEN_IMPLEMENTER_BOT.md  ROLE_CHARTER.md  WORK_ORDER_V0.md  current_task.yaml
docs/plans/: 2026-02-17-code-quality-security-remediation-design.md  2026-02-18-native-runner-design.md  2026-02-18-native-runner-phase2-implementation.md  2026-02-18-native-runner-s10-0-impl-plan.md  2026-02-18-security-remediation-s9-2-implementation.md  2026-02-19-native-runner-s10-1-design.md  2026-02-19-native-runner-s10-1-impl-plan.md  2026-02-20-s10-2-semantic-state-substrate.md  2026-02-20-s10-3-projection-storage.md  2026-02-20-s11-driver-factory-mvp.md  2026-06-17-s10-2-1-subscribe-reactor.md  2026-06-17-s10-2-v1-1-cap-filtered-snapshots.md  2026-06-17-s10-3-1-projection-index-backend.md  2026-06-17-s10-3-4-cow-projection-writes.md  2026-06-17-s10-4-execution-fabric.md  2026-06-17-s10-5-1-broker-kernel-bridge.md  2026-06-17-s10-5-2-qemu-ipc-bridge.md  2026-06-17-s10-5-host-to-target-integration.md  2026-06-21-s12-golden-machine-design.md  2026-06-21-s13-persistent-storage-design.md  2026-06-22-hil-appliance-controller.md  2026-06-23-g0-1-board-packet-validators.md  2026-06-23-g0-2-active-task-cross-packet.md  2026-06-23-g0-3-1-governance-label-claim-boundary.md  2026-06-23-g0-3-current-task-negative-fixtures.md  2026-06-23-g0-4-read-only-steward-heartbeat.md  2026-06-23-g0-5-agent-intake-freshness-binding.md  2026-06-23-g0-6-intake-only-agent-trial.md  2026-06-23-g0-7-bounded-context-grant.md  2026-06-23-g0-8-1-implementation-authority-serial-claim-hygiene.md  2026-06-23-g0-8-bounded-implementation-trial.md  2026-06-23-g0-9-first-a2-to-a3-loop.md  2026-06-23-research-backed-ramenorg.md  investigation_deep_security_review_2026-02-13.md  posix_runner_remaining_risks.md  security_remediation_v006_v007_v012.md  v007_phase2_store_service_ipc_design.md
docs/research/: INDEX.md  RESEARCH_PROGRAM.md  (+1 more)
driver_foundry/: Cargo.toml
hardware/: golden_machine_v0.toml  hil_appliance_v0.toml  storage_contract_v0.toml
idl_codegen/: Cargo.toml
kernel/: Cargo.toml
kernel/src/: block_harness.rs  boot.rs  cap_table.rs  domain_registry.rs  hil_provenance.rs  init.rs  ipc_v0.rs  lib.rs  net_harness.rs  serial.rs  shmem.rs  trace_cap.rs  trace_ring.rs  trace_service.rs
kernel/src/arch/: aarch64.rs  mmu.rs  mod.rs  x86_64.rs
kernel/src/arch/aarch64/: mmu.rs
kernel/src/arch/x86_64/: mmu.rs
kernel/src/mm/: address.rs  address_space.rs  bitmap.rs  bump.rs  constants.rs  frame.rs  mod.rs
kernel_aarch64/: Cargo.toml  build.rs  linker.ld
kernel_api/: Cargo.toml
kernel_uefi/: Cargo.toml  build.rs
runtime_supervisor/: Cargo.toml  POSIX_RUNNER_SECURITY.md
runtime_supervisor/src/: compat_runner.rs  fabric_policy.rs  gpu_runner.rs  launch_plan.rs  main.rs  native_wasm_runner.rs  posix_runner.rs  sandbox.rs
sdk/: Cargo.toml
services/capsule_relay/: Cargo.toml
services/capsule_relay/src/: main.rs  vm_backend.rs
services/domain_manager/: Cargo.toml
services/domain_manager/src/: audit.rs  broker.rs  error.rs  main.rs  semantic_snapshot.rs
services/execution_fabric/: Cargo.toml
services/execution_fabric/src/: lib.rs  main.rs
services/gpu_manager/: Cargo.toml
services/gpu_manager/src/: main.rs
services/native_runner/: Cargo.toml
services/native_runner/src/: context.rs  error.rs  kernel_bridge.rs  lib.rs  runner.rs
services/native_runner/src/harness/: echo.rs  mod.rs  trace.rs
services/native_runner/tests/: integration_test.rs
services/portals/: Cargo.toml
services/portals/src/: main.rs
services/semantic_state/: Cargo.toml
services/semantic_state/src/: lib.rs  reactor.rs  snapshot.rs  subscribe.rs
services/store_service/: Cargo.toml
services/store_service/src/: access_control.rs  audit.rs  capability.rs  client.rs  dev_mode.rs  domain_visibility.rs  frame.rs  lib.rs  main.rs  projection_cow.rs  projection_index.rs  projection_vfs.rs  status.rs
services/trace_client/: Cargo.toml
services/trace_client/src/: capability.rs  client.rs  error.rs  ipc.rs  lib.rs
store/: catalog.json
store_cli/: Cargo.toml
store_cli/src/: main.rs
(+240 files in other folders)
