[package]
name = "artifact_store_core"
version = "0.0.0"
edition = "2021"

[dependencies]
artifact_store_schema = { path = "../artifact_store_schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.8"
