[package]
name = "store_cli"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# V-007 Phase 2: Store service client for IPC-based artifact operations
store_service = { path = "../services/store_service" }
artifact_store_schema = { path = "../artifact_store_schema" }
anyhow = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
# V-007 Phase 2 Security: Exclusive temp file creation to prevent symlink attacks
tempfile = "3"
