[package]
name = "capsule_relay"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.8"  # Cryptographic session ID generation
kernel_api = { path = "../../kernel_api" }
artifact_store_schema = { path = "../../artifact_store_schema" }
store_service = { path = "../store_service" }
