[package]
name = "execution_fabric"
version = "0.0.0"
edition = "2021"

[dependencies]
artifact_store_schema = { path = "../../artifact_store_schema" }
clap = { version = "4", features = ["derive"] }
kernel_api = { path = "../../kernel_api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "execution_fabric"
path = "src/main.rs"
