[package]
name = "semantic_state"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use ramen_sdk for native OS interaction (Path B)
ramen_sdk = { path = "../../sdk" }
artifact_store_schema = { path = "../../artifact_store_schema" }
kernel_api = { path = "../../kernel_api" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[lib]
crate-type = ["cdylib", "rlib"]
