[package]
name = "trace_client"
version = "0.0.0"
edition = "2021"
description = "V-012 Phase 5: User-space trace service client library"

[dependencies]
kernel_api = { path = "../../kernel_api" }
artifact_store_schema = { path = "../../artifact_store_schema" }
thiserror = "1.0"  # Error derive macro
bincode = "1.3"    # IPC serialization

[dev-dependencies]
# Future: mock IPC layer for testing

[lib]
path = "src/lib.rs"
